[package]
name = "warp-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"]}
serde_json = "1.0"
warp = "0.3"